--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>114年度 主治醫師暨臨床教師餐敘</title>
-
+<title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -32,9 +31,13 @@ body {
     backdrop-filter: blur(10px);
 }
 .navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
+.nav-link:hover, .nav-link.active { color: #ADD8F7 !important; }
 
-/* 分頁 hover */
-.navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
+/* 分頁間距與放大效果 */
+.navbar-nav .nav-item {
+    margin-left: 8px;
+    margin-right: 8px;
+}
 .navbar-nav .nav-link {
     transition: transform 0.2s ease, font-size 0.2s ease;
 }
@@ -44,26 +47,29 @@ body {
     transform: scale(1.2);
 }
 
-/* 手機不放大 */
+/* 點擊後縮回動畫 */
+.navbar-nav .nav-link.clicked {
+    transform: scale(1.0);
+    transition: transform 0.3s ease;
+}
+
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
-        display:block;
-        text-align:center;
-        margin:5px 0;
+        display: block;
+        text-align: center;
+        margin: 5px 0;
     }
     .navbar-nav .nav-link:hover,
     .navbar-nav .nav-link:focus,
     .navbar-nav .nav-link.active {
-        transform:none !important;
+        transform: scale(1.2);
     }
 }
 
 /* Hero Banner */
 .hero {
     position: relative;
-    background: linear-gradient(rgba(75,0,130,0.7), rgba(147,112,219,0.6)),
-        url('https://images.unsplash.com/photo-1564865881850-17f48f6f16ff?auto=format&fit=crop&w=1350&q=80')
-        center/cover no-repeat;
+    background: linear-gradient(rgba(75,0,130,0.7), rgba(147,112,219,0.6)), url('https://images.unsplash.com/photo-1564865881850-17f48f6f16ff?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
     color: #fff;
     text-align: center;
     padding: 120px 20px 80px 20px;
@@ -74,23 +80,14 @@ body {
     font-weight: 700;
     text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
 }
-
-/* 主辦協辦排到最底部 */
-.hero-bottom-text {
-    margin-top: 30px;
-    font-size: 1.1rem;
+.hero p {
+    font-size: 1.3rem;
     font-weight: 500;
-    opacity: 0.95;
+    margin-top: 15px;
+    text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 }
 
-/* 手機版 Hero 文字縮小 */
-@media (max-width: 576px) {
-    .hero { padding: 80px 15px 50px 15px; }
-    .hero h1 { font-size: 1.8rem; line-height: 1.3; }
-    .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
-}
-
-/* 卡片淡入 */
+/* 卡片/方框風格 */
 .card-custom {
     background: #FFFFFF;
     border-radius: 0;
@@ -102,148 +99,116 @@ body {
     transition: all 0.8s ease;
 }
 .card-custom.visible {
-    opacity:1;
+    opacity: 1;
     transform: translateY(0);
 }
 
-/* 手機卡片縮小 padding */
-@media (max-width:576px){
-    .card-custom { padding: 15px; }
-}
-
-/* 標題 */
+/* 活動資訊與導航標題紫色加粗 */
 .section-title {
-    color:#6A0DAD; font-weight:700;
+    color: #6A0DAD;
+    font-weight: 700;
 }
 
-/* 小日曆圖示 */
-.section-title .calendar-icon {
-    display:inline-block;
-    width:40px;
-    height:40px;
-    background:#ADD8E6;
-    color:#fff;
-    font-weight:700;
-    border-radius:6px;
-    text-align:center;
-    margin-right:10px;
-    line-height:1;
-    font-size:14px;
-    padding-top:2px;
-    vertical-align:middle;
+/* 活動資訊內表格線 */
+.list-group-item {
+    border: 1px solid #DDD;
 }
-.section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
-.section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
-
-.list-group-item { border:1px solid #DDD; }
 
 /* 按鈕 */
 .btn-custom {
-    background: linear-gradient(90deg,#4B0082,#9370DB);
-    color:#fff;
-    font-weight:600;
-    border-radius:8px;
-    padding:10px 25px;
-    transition:0.3s;
-    display:inline-block;
+    background: linear-gradient(90deg, #4B0082, #9370DB);
+    color: #fff;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 10px 25px;
+    transition: 0.3s;
+    display: inline-block;
 }
 .btn-custom:hover {
-    background: linear-gradient(90deg,#9370DB,#4B0082);
+    background: linear-gradient(90deg, #9370DB, #4B0082);
     transform: scale(1.05);
 }
 
 /* Footer */
 .footer {
-    background-color:#F3E8FF;
-    color:#4B0082;
-    padding:15px 0;
-    text-align:center;
-    border-top:1px solid #E0D0F0;
+    background-color: #F3E8FF;
+    color: #4B0082;
+    padding: 15px 0;
+    text-align: center;
+    border-top: 1px solid #E0D0F0;
 }
 </style>
 </head>
-
 <body>
 
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院114年度</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse ms-auto" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
-                <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
-                <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
-                <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
-                <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
-            </ul>
-        </div>
+<div class="container">
+    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
+            <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
+            <li class="nav-item"><a class="nav-link" href="registration.html">報名名單</a></li>
+            <li class="nav-item"><a class="nav-link" href="checkin-終版-F.html">當日報到系統</a></li>
+            <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
+        </ul>
     </div>
+</div>
 </nav>
 
 <!-- Hero Banner -->
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
-    <div class="hero-bottom-text">
-        主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
-    </div>
+    <p>主辦：教學研究組 | 協辦：台南市醫師公會</p>
 </section>
 
 <main class="container mt-5">
 
-<!-- 活動資訊 -->
-<section class="mb-5">
-    <h3 class="section-title mb-3">
-        <span class="calendar-icon">
-            <span class="month">11月</span>
-            <span class="day">28</span>
-        </span>
-        活動資訊一覽
-    </h3>
-
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
-                    <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                    <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                </ul>
-            </section>
+    <!-- 活動資訊 -->
+    <section class="mb-5">
+        <h3 class="section-title mb-3">📅 活動資訊一覽</h3>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <section class="card-custom">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
+                        <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
+                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-md-6 mb-3">
+                <section class="card-custom">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
+                        <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                        <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                        <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
+                    </ul>
+                </section>
+            </div>
         </div>
-        <div class="col-md-6 mb-3">
-            <section class="card-custom">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
-                    <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                    <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
-                    <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
-                </ul>
-            </section>
-        </div>
-    </div>
-</section>
-
-<!-- 交通 -->
-<section class="mb-5">
-    <h3 class="section-title mb-3">📍 交通與導航</h3>
-    <section class="card-custom">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
-            <li class="list-group-item">
-                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">
-                    🚗 點擊前往 Google 地圖導航
-                </a>
-            </li>
-            <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
-        </ul>
     </section>
-</section>
+
+    <!-- 交通與導航 -->
+    <section class="mb-5">
+        <h3 class="section-title mb-3">📍 交通與導航</h3>
+        <section class="card-custom">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
+                <li class="list-group-item">
+                    <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
+                </li>
+                <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
+            </ul>
+        </section>
+    </section>
 
 </main>
 
@@ -258,44 +223,39 @@ body {
 <!-- 背景氣泡動畫 -->
 <script>
 const bubbleColors=['#E6E6FA','#D8BFD8','#F0F8FF','#DDA0DD','#DA70D6','#9370DB'];
-const bubbles=[];
-const bubbleCount=35;
+const bubbles=[]; const bubbleCount=35;
 let width=window.innerWidth, height=window.innerHeight;
-
 for(let i=0;i<bubbleCount;i++){
-    let b=document.createElement('div');
-    b.classList.add('bubble');
-    let size=Math.random()*60+20;
-    b.style.width=size+'px';
-    b.style.height=size+'px';
-    b.style.left=Math.random()*width+'px';
-    b.style.top=Math.random()*height+'px';
-    b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
-    document.body.appendChild(b);
-    bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
+  let b=document.createElement('div'); b.classList.add('bubble');
+  let size=Math.random()*60+20;
+  b.style.width=size+'px'; b.style.height=size+'px';
+  b.style.left=Math.random()*width+'px'; b.style.top=Math.random()*height+'px';
+  b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
+  document.body.appendChild(b);
+  bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
 }
-
 function animateBubbles(){
-    bubbles.forEach(b=>{
-        b.x+=b.dx; b.y+=b.dy;
-        if(b.y+parseFloat(b.el.style.height)<0){ b.y=height; b.x=Math.random()*width; }
-        if(b.x<0) b.x=width; if(b.x>width) b.x=0;
-        b.el.style.left=b.x+'px'; b.el.style.top=b.y+'px';
-    });
-    requestAnimationFrame(animateBubbles);
+  bubbles.forEach(b=>{ b.x+=b.dx;b.y+=b.dy;
+    if(b.y+parseFloat(b.el.style.height)<0){b.y=height;b.x=Math.random()*width;}
+    if(b.x<0)b.x=width;if(b.x>width)b.x=0;
+    b.el.style.left=b.x+'px';b.el.style.top=b.y+'px';
+  });
+  requestAnimationFrame(animateBubbles);
 }
 animateBubbles();
 window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
 </script>
 
-<!-- 卡片滾動淡入 -->
+<!-- 卡片滾動淡入動畫 -->
 <script>
 const cards = document.querySelectorAll('.card-custom');
 function revealCards() {
     const triggerBottom = window.innerHeight * 0.85;
     cards.forEach(card => {
         const cardTop = card.getBoundingClientRect().top;
-        if(cardTop < triggerBottom) card.classList.add('visible');
+        if(cardTop < triggerBottom) {
+            card.classList.add('visible');
+        }
     });
 }
 window.addEventListener('scroll', revealCards);
