--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@ body {
     backdrop-filter: blur(10px);
 }
 .navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
-.nav-link:hover, .nav-link.active { color: #ADD8F7 !important; }
 
-/* 分頁間距與放大效果 */
+/* 分頁 hover 效果（桌機） */
 .navbar-nav .nav-item {
     margin-left: 8px;
     margin-right: 8px;
@@ -47,12 +46,7 @@ body {
     transform: scale(1.2);
 }
 
-/* 點擊後縮回動畫 */
-.navbar-nav .nav-link.clicked {
-    transform: scale(1.0);
-    transition: transform 0.3s ease;
-}
-
+/* 手機：禁用分頁放大效果，避免跑版 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -62,7 +56,7 @@ body {
     .navbar-nav .nav-link:hover,
     .navbar-nav .nav-link:focus,
     .navbar-nav .nav-link.active {
-        transform: scale(1.2);
+        transform: none !important;
     }
 }
 
@@ -84,10 +78,23 @@ body {
     font-size: 1.3rem;
     font-weight: 500;
     margin-top: 15px;
-    text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 }
 
-/* 卡片/方框風格 */
+/* 手機版 Hero 文字縮小 */
+@media (max-width: 576px) {
+    .hero {
+        padding: 80px 15px 50px 15px;
+    }
+    .hero h1 {
+        font-size: 1.8rem;
+        line-height: 1.3;
+    }
+    .hero p {
+        font-size: 1rem;
+    }
+}
+
+/* 卡片動態淡入 */
 .card-custom {
     background: #FFFFFF;
     border-radius: 0;
@@ -103,13 +110,20 @@ body {
     transform: translateY(0);
 }
 
-/* 活動資訊與導航標題紫色加粗 */
+/* 手機：卡片 padding 調整 */
+@media (max-width: 576px) {
+    .card-custom {
+        padding: 15px;
+    }
+}
+
+/* 區塊標題紫色 */
 .section-title {
     color: #6A0DAD;
     font-weight: 700;
 }
 
-/* 活動資訊內表格線 */
+/* 列表線條 */
 .list-group-item {
     border: 1px solid #DDD;
 }
@@ -144,7 +158,7 @@ body {
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度</a>
+    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院餐敘</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -163,8 +177,8 @@ body {
 
 <!-- Hero Banner -->
 <section class="hero">
-    <h1>主治醫師暨臨床教師餐敘</h1>
-    <p>主辦：教學研究組 | 協辦：台南市醫師公會</p>
+    <h1>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</h1>
+    <p>主辦單位：佳里奇美醫院 | 協辦單位：台南市醫師公會</p>
 </section>
 
 <main class="container mt-5">
@@ -178,18 +192,18 @@ body {
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                         <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
+                        <li class="list-group-item"><strong>主辦：</strong> 佳里奇美醫院</li>
+                        <li class="list-group-item"><strong>協辦：</strong> 台南市醫師公會</li>
                     </ul>
                 </section>
             </div>
             <div class="col-md-6 mb-3">
                 <section class="card-custom">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
+                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
+                        <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組</li>
                         <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                        <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
-                        <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
                     </ul>
                 </section>
             </div>
