--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
 <!-- 導覽列 -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院餐敘</a>
+    <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -177,8 +177,8 @@ body {
 
 <!-- Hero Banner -->
 <section class="hero">
-    <h1>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</h1>
-    <p>主辦單位：佳里奇美醫院 | 協辦單位：台南市醫師公會</p>
+    <h1>主治醫師暨臨床教師餐敘</h1>
+    <p>主辦：教學研究組 | 協辦：台南市醫師公會</p>
 </section>
 
 <main class="container mt-5">
@@ -192,18 +192,19 @@ body {
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                         <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                        <li class="list-group-item"><strong>主辦：</strong> 佳里奇美醫院</li>
-                        <li class="list-group-item"><strong>協辦：</strong> 台南市醫師公會</li>
+                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
                     </ul>
                 </section>
             </div>
             <div class="col-md-6 mb-3">
                 <section class="card-custom">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                        <li class="list-group-item"><strong>聯絡窗口：</strong> 教學研究組</li>
+                       
+                        <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
                         <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                        <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                        <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
                     </ul>
                 </section>
             </div>
@@ -289,3 +290,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
