--- a/index.html
+++ b/index.html
@@ -33,30 +33,27 @@ body {
 .navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
 
 /* 分頁 hover 效果（桌機） */
-.navbar-nav .nav-item {
-    margin-left: 8px;
-    margin-right: 8px;
-}
+.navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
 .navbar-nav .nav-link {
-    transition: transform 0.2s ease, font-size 0.2s ease;
+    transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus,
 .navbar-nav .nav-link.active {
     transform: scale(1.2);
+    color: #1E90FF !important; /* 藍色 */
 }
 
-/* 手機：禁用分頁放大效果，避免跑版 */
+/* 手機：點擊 active 變藍色，不放大 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
         text-align: center;
         margin: 5px 0;
-    }
-    .navbar-nav .nav-link:hover,
-    .navbar-nav .nav-link:focus,
-    .navbar-nav .nav-link.active {
         transform: none !important;
+    }
+    .navbar-nav .nav-link.active {
+        color: #1E90FF !important;
     }
 }
 
@@ -74,24 +71,20 @@ body {
     font-weight: 700;
     text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
 }
-.hero p {
-    font-size: 1.3rem;
+
+/* 主辦協辦文字 */
+.hero-bottom-text {
+    margin-top: 30px;
+    font-size: 1.1rem;
     font-weight: 500;
-    margin-top: 15px;
+    opacity: 0.95;
 }
 
 /* 手機版 Hero 文字縮小 */
 @media (max-width: 576px) {
-    .hero {
-        padding: 80px 15px 50px 15px;
-    }
-    .hero h1 {
-        font-size: 1.8rem;
-        line-height: 1.3;
-    }
-    .hero p {
-        font-size: 1rem;
-    }
+    .hero { padding: 80px 15px 50px 15px; }
+    .hero h1 { font-size: 1.8rem; line-height: 1.3; }
+    .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
 }
 
 /* 卡片動態淡入 */
@@ -110,33 +103,41 @@ body {
     transform: translateY(0);
 }
 
-/* 手機：卡片 padding 調整 */
-@media (max-width: 576px) {
-    .card-custom {
-        padding: 15px;
-    }
-}
+/* 手機卡片 padding 調整 */
+@media (max-width: 576px) { .card-custom { padding: 15px; } }
 
-/* 區塊標題紫色 */
-.section-title {
-    color: #6A0DAD;
-    font-weight: 700;
-}
+/* 區塊標題 */
+.section-title { color: #6A0DAD; font-weight: 700; }
 
-/* 列表線條 */
-.list-group-item {
-    border: 1px solid #DDD;
+/* 活動資訊小日曆圖示 */
+.section-title .calendar-icon {
+    display:inline-block;
+    width:40px; height:40px;
+    background:#ADD8E6; /* 淺藍色 */
+    color:#fff;
+    font-weight:700;
+    border-radius:6px;
+    text-align:center;
+    margin-right:10px;
+    line-height:1;
+    font-size:14px;
+    padding-top:2px;
+    vertical-align:middle;
 }
+.section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
+.section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
+
+.list-group-item { border: 1px solid #DDD; }
 
 /* 按鈕 */
 .btn-custom {
     background: linear-gradient(90deg, #4B0082, #9370DB);
-    color: #fff;
-    font-weight: 600;
-    border-radius: 8px;
-    padding: 10px 25px;
-    transition: 0.3s;
-    display: inline-block;
+    color:#fff;
+    font-weight:600;
+    border-radius:8px;
+    padding:10px 25px;
+    transition:0.3s;
+    display:inline-block;
 }
 .btn-custom:hover {
     background: linear-gradient(90deg, #9370DB, #4B0082);
@@ -148,8 +149,8 @@ body {
     background-color: #F3E8FF;
     color: #4B0082;
     padding: 15px 0;
-    text-align: center;
-    border-top: 1px solid #E0D0F0;
+    text-align:center;
+    border-top:1px solid #E0D0F0;
 }
 </style>
 </head>
@@ -178,52 +179,62 @@ body {
 <!-- Hero Banner -->
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
-    <p>主辦：教學研究組 | 協辦：台南市醫師公會</p>
+    <div class="hero-bottom-text">
+        主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
+    </div>
 </section>
 
 <main class="container mt-5">
 
-    <!-- 活動資訊 -->
-    <section class="mb-5">
-        <h3 class="section-title mb-3">📅 活動資訊一覽</h3>
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <section class="card-custom">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
-                        <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                        <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
-                        <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
-                    </ul>
-                </section>
-            </div>
-            <div class="col-md-6 mb-3">
-                <section class="card-custom">
-                    <ul class="list-group list-group-flush">
-                       
-                        <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
-                        <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
-                        <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
-                        <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
-                    </ul>
-                </section>
-            </div>
-        </div>
-    </section>
+<!-- 活動資訊 -->
+<section class="mb-5">
+    <h3 class="section-title mb-3">
+        <span class="calendar-icon">
+            <span class="month">11月</span>
+            <span class="day">28</span>
+        </span>
+        活動資訊一覽
+    </h3>
 
-    <!-- 交通與導航 -->
-    <section class="mb-5">
-        <h3 class="section-title mb-3">📍 交通與導航</h3>
-        <section class="card-custom">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
-                <li class="list-group-item">
-                    <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
-                </li>
-                <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
-            </ul>
-        </section>
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <section class="card-custom">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
+                    <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
+                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                    <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
+                </ul>
+            </section>
+        </div>
+        <div class="col-md-6 mb-3">
+            <section class="card-custom">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐/謝佾樺小姐</li>
+                    <li class="list-group-item"><strong>聯絡分機：</strong> 32985/32987</li>
+                    <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
+                    <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
+                </ul>
+            </section>
+        </div>
+    </div>
+</section>
+
+<!-- 交通與導航 -->
+<section class="mb-5">
+    <h3 class="section-title mb-3">📍 交通與導航</h3>
+    <section class="card-custom">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
+            <li class="list-group-item">
+                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">
+                    🚗 點擊前往 Google 地圖導航
+                </a>
+            </li>
+            <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
+        </ul>
     </section>
+</section>
 
 </main>
 
@@ -268,9 +279,7 @@ function revealCards() {
     const triggerBottom = window.innerHeight * 0.85;
     cards.forEach(card => {
         const cardTop = card.getBoundingClientRect().top;
-        if(cardTop < triggerBottom) {
-            card.classList.add('visible');
-        }
+        if(cardTop < triggerBottom) card.classList.add('visible');
     });
 }
 window.addEventListener('scroll', revealCards);
@@ -290,4 +299,3 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
-
