--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ body {
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
     <div class="hero-bottom-text">
-        主辦：佳里奇美醫院教學研究組｜協辦：台南市醫師公會
+        主辦：教學研究組｜協辦：台南市醫師公會
     </div>
 </section>
 
@@ -299,3 +299,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
