--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@ body {
     background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
     backdrop-filter: blur(10px);
 }
-.navbar-brand, .nav-link { color: #FFFFFF !important; font-weight: 700; }
-
-/* 分頁 hover 效果（桌機） */
-.navbar-nav .nav-item { margin-left: 8px; margin-right: 8px; }
+.navbar-brand { color: #FFFFFF !important; font-weight: 700; }
 .navbar-nav .nav-link {
+    color: #FFFFFF !important; /* 初始白色 */
+    font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
 .navbar-nav .nav-link:hover,
-.navbar-nav .nav-link:focus,
-.navbar-nav .nav-link.active {
-    transform: scale(1.2);
-    color: #1E90FF !important; /* 藍色 */
+.navbar-nav .nav-link:focus {
+    transform: scale(1.2); /* 桌機滑過放大 */
 }
 
-/* 手機：點擊 active 變藍色，不放大 */
+/* active 狀態顯示亮黃色 */
+.navbar-nav .nav-link.active {
+    color: #FFD700 !important; /* 亮黃色 */
+}
+
+/* 手機：禁用滑動放大效果，active 亮黃 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -53,7 +55,7 @@ body {
         transform: none !important;
     }
     .navbar-nav .nav-link.active {
-        color: #1E90FF !important;
+        color: #FFD700 !important;
     }
 }
 
@@ -87,7 +89,7 @@ body {
     .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
 }
 
-/* 卡片動態淡入 */
+/* 卡片淡入 */
 .card-custom {
     background: #FFFFFF;
     border-radius: 0;
@@ -102,8 +104,6 @@ body {
     opacity: 1;
     transform: translateY(0);
 }
-
-/* 手機卡片 padding 調整 */
 @media (max-width: 576px) { .card-custom { padding: 15px; } }
 
 /* 區塊標題 */
@@ -127,7 +127,7 @@ body {
 .section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
 .section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
 
-.list-group-item { border: 1px solid #DDD; }
+.list-group-item { border:1px solid #DDD; }
 
 /* 按鈕 */
 .btn-custom {
@@ -291,12 +291,11 @@ window.addEventListener('load', revealCards);
 const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
 navLinks.forEach(link=>{
     link.addEventListener('click', ()=>{
-        link.classList.add('clicked');
-        setTimeout(()=> link.classList.remove('clicked'), 300);
+        navLinks.forEach(l=>l.classList.remove('active')); // 移除其他 active
+        link.classList.add('active'); // 點選變亮黃
     });
 });
 </script>
 
 </body>
 </html>
-
