--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@ body {
     .navbar-nav .nav-link.active {
         color: #FFD700 !important;
     }
+    /* 分頁水平間距 */
+.navbar-nav .nav-item {
+    margin-left: 16px;   /* 左右間距可調整 */
+    margin-right: 16px;
 }
 
 /* Hero Banner */
@@ -299,3 +303,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
