--- a/index.html
+++ b/index.html
@@ -31,22 +31,32 @@ body {
     backdrop-filter: blur(10px);
 }
 .navbar-brand { color: #FFFFFF !important; font-weight: 700; }
+
+/* 分頁水平間距 */
+.navbar-nav .nav-item {
+    margin-left: 16px;   /* 調整桌機分頁距離 */
+    margin-right: 16px;
+}
+
+/* 分頁文字及效果 */
 .navbar-nav .nav-link {
     color: #FFFFFF !important; /* 初始白色 */
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
+
+/* 桌機滑過放大 */
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
-    transform: scale(1.2); /* 桌機滑過放大 */
+    transform: scale(1.2);
 }
 
-/* active 狀態顯示亮黃色 */
+/* active 狀態亮黃色 */
 .navbar-nav .nav-link.active {
-    color: #FFD700 !important; /* 亮黃色 */
+    color: #FFD700 !important;
 }
 
-/* 手機：禁用滑動放大效果，active 亮黃 */
+/* 手機：禁用滑動放大，active 亮黃 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -54,13 +64,7 @@ body {
         margin: 5px 0;
         transform: none !important;
     }
-    .navbar-nav .nav-link.active {
-        color: #FFD700 !important;
-    }
-    /* 分頁水平間距 */
-.navbar-nav .nav-item {
-    margin-left: 16px;   /* 左右間距可調整 */
-    margin-right: 16px;
+    .navbar-nav .nav-link.active { color: #FFD700 !important; }
 }
 
 /* Hero Banner */
@@ -77,16 +81,12 @@ body {
     font-weight: 700;
     text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
 }
-
-/* 主辦協辦文字 */
 .hero-bottom-text {
     margin-top: 30px;
     font-size: 1.1rem;
     font-weight: 500;
     opacity: 0.95;
 }
-
-/* 手機版 Hero 文字縮小 */
 @media (max-width: 576px) {
     .hero { padding: 80px 15px 50px 15px; }
     .hero h1 { font-size: 1.8rem; line-height: 1.3; }
@@ -199,7 +199,6 @@ body {
         </span>
         活動資訊一覽
     </h3>
-
     <div class="row">
         <div class="col-md-6 mb-3">
             <section class="card-custom">
@@ -231,9 +230,7 @@ body {
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
             <li class="list-group-item">
-                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">
-                    🚗 點擊前往 Google 地圖導航
-                </a>
+                <a href="https://www.google.com/maps?q=台南市安平區華平路156號" target="_blank" class="btn btn-custom mt-1">🚗 點擊前往 Google 地圖導航</a>
             </li>
             <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
         </ul>
@@ -290,17 +287,16 @@ window.addEventListener('scroll', revealCards);
 window.addEventListener('load', revealCards);
 </script>
 
-<!-- 點擊縮回動畫 -->
+<!-- 點擊縮回動畫與 active 顯示 -->
 <script>
 const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
 navLinks.forEach(link=>{
     link.addEventListener('click', ()=>{
-        navLinks.forEach(l=>l.classList.remove('active')); // 移除其他 active
-        link.classList.add('active'); // 點選變亮黃
+        navLinks.forEach(l=>l.classList.remove('active'));
+        link.classList.add('active');
     });
 });
 </script>
 
 </body>
 </html>
-
