--- a/index.html
+++ b/index.html
@@ -32,17 +32,15 @@ body {
 }
 .navbar-brand { color: #FFFFFF !important; font-weight: 700; }
 
-/* 桌機版：整個分頁往右移動 */
+/* 分頁水平間距與右移 */
+.navbar-nav .nav-item {
+    margin-left: 10px;
+    margin-right: 10px;
+}
 @media (min-width: 992px) {
     .navbar-nav {
-        margin-left: 50px; /* 調整整個分頁往右 */
+        padding-left: 50px; /* 桌機版整列右移 */
     }
-}
-
-/* 分頁水平間距 */
-.navbar-nav .nav-item {
-    margin-left: 10px;   /* 桌機分頁間距 */
-    margin-right: 10px;
 }
 
 /* 分頁文字及效果 */
@@ -51,17 +49,13 @@ body {
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
-
 /* 桌機滑過放大 */
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
     transform: scale(1.2);
 }
-
 /* active 狀態亮黃色 */
-.navbar-nav .nav-link.active {
-    color: #FFD700 !important;
-}
+.navbar-nav .nav-link.active { color: #FFD700 !important; }
 
 /* 手機：禁用滑動放大，active 亮黃 */
 @media (max-width: 992px) {
@@ -124,7 +118,7 @@ body {
 .section-title .calendar-icon {
     display:inline-block;
     width:40px; height:40px;
-    background:#ADD8E6;
+    background:#ADD8E6; /* 淺藍色 */
     color:#fff;
     font-weight:700;
     border-radius:6px;
@@ -252,59 +246,4 @@ body {
     </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- 背景氣泡動畫 -->
-<script>
-const bubbleColors=['#E6E6FA','#D8BFD8','#F0F8FF','#DDA0DD','#DA70D6','#9370DB'];
-const bubbles=[]; const bubbleCount=35;
-let width=window.innerWidth, height=window.innerHeight;
-for(let i=0;i<bubbleCount;i++){
-  let b=document.createElement('div'); b.classList.add('bubble');
-  let size=Math.random()*60+20;
-  b.style.width=size+'px'; b.style.height=size+'px';
-  b.style.left=Math.random()*width+'px'; b.style.top=Math.random()*height+'px';
-  b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
-  document.body.appendChild(b);
-  bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
-}
-function animateBubbles(){
-  bubbles.forEach(b=>{ b.x+=b.dx;b.y+=b.dy;
-    if(b.y+parseFloat(b.el.style.height)<0){b.y=height;b.x=Math.random()*width;}
-    if(b.x<0)b.x=width;if(b.x>width)b.x=0;
-    b.el.style.left=b.x+'px';b.el.style.top=b.y+'px';
-  });
-  requestAnimationFrame(animateBubbles);
-}
-animateBubbles();
-window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
-</script>
-
-<!-- 卡片滾動淡入動畫 -->
-<script>
-const cards = document.querySelectorAll('.card-custom');
-function revealCards() {
-    const triggerBottom = window.innerHeight * 0.85;
-    cards.forEach(card => {
-        const cardTop = card.getBoundingClientRect().top;
-        if(cardTop < triggerBottom) card.classList.add('visible');
-    });
-}
-window.addEventListener('scroll', revealCards);
-window.addEventListener('load', revealCards);
-</script>
-
-<!-- 點擊縮回動畫與 active 顯示 -->
-<script>
-const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
-navLinks.forEach(link=>{
-    link.addEventListener('click', ()=>{
-        navLinks.forEach(l=>l.classList.remove('active'));
-        link.classList.add('active');
-    });
-});
-</script>
-
-</body>
-</html>
-
+<script src="https://cdn.jsdelivr.net/npm/
