--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@ body {
 }
 .navbar-brand { color: #FFFFFF !important; font-weight: 700; }
 
-/* 分頁水平間距與右移 */
+/* 分頁水平間距 */
 .navbar-nav .nav-item {
     margin-left: 10px;
     margin-right: 10px;
 }
+
+/* 桌機版整列右移 */
 @media (min-width: 992px) {
     .navbar-nav {
-        padding-left: 50px; /* 桌機版整列右移 */
+        padding-left: 50px; /* 桌機版分頁整列往右 50px */
     }
 }
 
@@ -49,13 +51,17 @@ body {
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
+
 /* 桌機滑過放大 */
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus {
     transform: scale(1.2);
 }
+
 /* active 狀態亮黃色 */
-.navbar-nav .nav-link.active { color: #FFD700 !important; }
+.navbar-nav .nav-link.active {
+    color: #FFD700 !important;
+}
 
 /* 手機：禁用滑動放大，active 亮黃 */
 @media (max-width: 992px) {
@@ -77,22 +83,9 @@ body {
     padding: 120px 20px 80px 20px;
     box-shadow: inset 0 0 100px rgba(0,0,0,0.3);
 }
-.hero h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
-}
-.hero-bottom-text {
-    margin-top: 30px;
-    font-size: 1.1rem;
-    font-weight: 500;
-    opacity: 0.95;
-}
-@media (max-width: 576px) {
-    .hero { padding: 80px 15px 50px 15px; }
-    .hero h1 { font-size: 1.8rem; line-height: 1.3; }
-    .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
-}
+.hero h1 { font-size: 3rem; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); }
+.hero-bottom-text { margin-top: 30px; font-size: 1.1rem; font-weight: 500; opacity: 0.95; }
+@media (max-width: 576px) { .hero { padding: 80px 15px 50px 15px; } .hero h1 { font-size: 1.8rem; line-height: 1.3; } .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; } }
 
 /* 卡片淡入 */
 .card-custom {
@@ -105,10 +98,7 @@ body {
     transform: translateY(50px);
     transition: all 0.8s ease;
 }
-.card-custom.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
+.card-custom.visible { opacity: 1; transform: translateY(0); }
 @media (max-width: 576px) { .card-custom { padding: 15px; } }
 
 /* 區塊標題 */
@@ -118,16 +108,10 @@ body {
 .section-title .calendar-icon {
     display:inline-block;
     width:40px; height:40px;
-    background:#ADD8E6; /* 淺藍色 */
-    color:#fff;
-    font-weight:700;
-    border-radius:6px;
-    text-align:center;
-    margin-right:10px;
-    line-height:1;
-    font-size:14px;
-    padding-top:2px;
-    vertical-align:middle;
+    background:#ADD8E6; color:#fff; font-weight:700;
+    border-radius:6px; text-align:center;
+    margin-right:10px; line-height:1; font-size:14px;
+    padding-top:2px; vertical-align:middle;
 }
 .section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
 .section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
@@ -135,28 +119,11 @@ body {
 .list-group-item { border:1px solid #DDD; }
 
 /* 按鈕 */
-.btn-custom {
-    background: linear-gradient(90deg, #4B0082, #9370DB);
-    color:#fff;
-    font-weight:600;
-    border-radius:8px;
-    padding:10px 25px;
-    transition:0.3s;
-    display:inline-block;
-}
-.btn-custom:hover {
-    background: linear-gradient(90deg, #9370DB, #4B0082);
-    transform: scale(1.05);
-}
+.btn-custom { background: linear-gradient(90deg, #4B0082, #9370DB); color:#fff; font-weight:600; border-radius:8px; padding:10px 25px; transition:0.3s; display:inline-block; }
+.btn-custom:hover { background: linear-gradient(90deg, #9370DB, #4B0082); transform: scale(1.05); }
 
 /* Footer */
-.footer {
-    background-color: #F3E8FF;
-    color: #4B0082;
-    padding: 15px 0;
-    text-align:center;
-    border-top:1px solid #E0D0F0;
-}
+.footer { background-color: #F3E8FF; color: #4B0082; padding: 15px 0; text-align:center; border-top:1px solid #E0D0F0; }
 </style>
 </head>
 <body>
@@ -184,9 +151,7 @@ body {
 <!-- Hero Banner -->
 <section class="hero">
     <h1>主治醫師暨臨床教師餐敘</h1>
-    <div class="hero-bottom-text">
-        主辦：教學研究組｜協辦：台南市醫師公會
-    </div>
+    <div class="hero-bottom-text">主辦：教學研究組｜協辦：台南市醫師公會</div>
 </section>
 
 <main class="container mt-5">
@@ -194,10 +159,7 @@ body {
 <!-- 活動資訊 -->
 <section class="mb-5">
     <h3 class="section-title mb-3">
-        <span class="calendar-icon">
-            <span class="month">11月</span>
-            <span class="day">28</span>
-        </span>
+        <span class="calendar-icon"><span class="month">11月</span><span class="day">28</span></span>
         活動資訊一覽
     </h3>
     <div class="row">
@@ -246,4 +208,57 @@ body {
     </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- 背景氣泡動畫 -->
+<script>
+const bubbleColors=['#E6E6FA','#D8BFD8','#F0F8FF','#DDA0DD','#DA70D6','#9370DB'];
+const bubbles=[]; const bubbleCount=35;
+let width=window.innerWidth, height=window.innerHeight;
+for(let i=0;i<bubbleCount;i++){
+  let b=document.createElement('div'); b.classList.add('bubble');
+  let size=Math.random()*60+20;
+  b.style.width=size+'px'; b.style.height=size+'px';
+  b.style.left=Math.random()*width+'px'; b.style.top=Math.random()*height+'px';
+  b.style.background=bubbleColors[Math.floor(Math.random()*bubbleColors.length)];
+  document.body.appendChild(b);
+  bubbles.push({el:b,x:parseFloat(b.style.left),y:parseFloat(b.style.top),dx:(Math.random()-0.5)*0.6,dy:-Math.random()*0.8-0.2});
+}
+function animateBubbles(){
+  bubbles.forEach(b=>{ b.x+=b.dx;b.y+=b.dy;
+    if(b.y+parseFloat(b.el.style.height)<0){b.y=height;b.x=Math.random()*width;}
+    if(b.x<0)b.x=width;if(b.x>width)b.x=0;
+    b.el.style.left=b.x+'px';b.el.style.top=b.y+'px';
+  });
+  requestAnimationFrame(animateBubbles);
+}
+animateBubbles();
+window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
+</script>
+
+<!-- 卡片滾動淡入動畫 -->
+<script>
+const cards = document.querySelectorAll('.card-custom');
+function revealCards() {
+    const triggerBottom = window.innerHeight * 0.85;
+    cards.forEach(card => { const cardTop = card.getBoundingClientRect().top;
+        if(cardTop < triggerBottom) card.classList.add('visible');
+    });
+}
+window.addEventListener('scroll', revealCards);
+window.addEventListener('load', revealCards);
+</script>
+
+<!-- 分頁點擊 active -->
+<script>
+const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+navLinks.forEach(link=>{
+    link.addEventListener('click', ()=>{
+        navLinks.forEach(l=>l.classList.remove('active'));
+        link.classList.add('active');
+    });
+});
+</script>
+
+</body>
+</html>
