--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body {
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                     <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (華平館)</li>
+                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館 (1F 東嬿廳)</li>
                     <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
                 </ul>
             </section>
@@ -300,3 +300,4 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
