--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ body {
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                     <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館(
-                         <span style="color:#1E90FF; font-weight:700;">2F東嬿廳</span>)
+                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場華平囍嫁館(
+                         <span style="color:#00A6FF; font-weight:700;">2F東嬿廳</span>)
                     </li>
                     <li class="list-group-item"><strong>地址：</strong> 台南市安平區華平路156號</li>
                 </ul>
@@ -302,6 +302,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
