--- a/index.html
+++ b/index.html
@@ -205,10 +205,9 @@ body {
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                     <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
-                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館(
-                         <span style="color:#00A6FF; font-weight:600;">2F東嬿廳</span>)
+                    <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館
+                    <li class="list-group-item"><strong>廳別：</strong> <span style="color:#00A6FF; font-weight:600;">2F東嬿廳</span>)
                     </li>
-                    <li class="list-group-item"><strong>廳別：</strong> 台南市安平區華平路156號</li>
                 </ul>
             </section>
         </div>
@@ -302,6 +301,7 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
+
 
 
 
