--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@ body {
     color: #FFD700 !important;
 }
 
-/* 手機：禁用滑動放大，active 亮黃 */
+/* 手機版下拉選單調整 */
 @media (max-width: 992px) {
+    .navbar-collapse {
+        position: fixed;
+        top: 56px; /* navbar 高度 */
+        left: 0;
+        right: 0;
+        width: 100%;
+        max-width: 100%;
+        padding-right: 0;
+        margin-right: 0;
+        background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
+        z-index: 999;
+    }
     .navbar-nav .nav-link {
         display: block;
         text-align: center;
@@ -117,7 +129,7 @@ body {
 .section-title .calendar-icon {
     display:inline-block;
     width:40px; height:40px;
-    background:#ADD8E6; /* 淺藍色 */
+    background:#0077FF; /* 深亮藍 */
     color:#fff;
     font-weight:700;
     border-radius:6px;
@@ -301,14 +313,3 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
