--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@ body {
 
 /* 分頁水平間距 */
 .navbar-nav .nav-item {
-    margin-left: 5px;   /* 調整桌機分頁距離 */
+    margin-left: 5px;   
     margin-right: 5px;
 }
 
 /* 分頁文字及效果 */
 .navbar-nav .nav-link {
-    color: #FFFFFF !important; /* 初始白色 */
+    color: #FFFFFF !important; 
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
@@ -56,27 +56,33 @@ body {
     color: #FFD700 !important;
 }
 
-/* 手機版下拉選單調整 */
+/* 手機版下拉選單調整 & 從右滑入動畫 */
 @media (max-width: 992px) {
     .navbar-collapse {
         position: fixed;
-        top: 56px; /* navbar 高度 */
-        left: 0;
+        top: 56px; 
         right: 0;
-        width: 100%;
-        max-width: 100%;
-        padding-right: 0;
-        margin-right: 0;
-        background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
+        width: 250px; /* 選單寬度 */
+        max-width: 80%;
+        height: 100vh;
+        background: linear-gradient(90deg, rgba(75,0,130,0.95), rgba(147,112,219,0.95));
+        padding-top: 20px;
+        transform: translateX(100%);
+        transition: transform 0.35s ease;
         z-index: 999;
+    }
+    .navbar-collapse.show {
+        transform: translateX(0);
     }
     .navbar-nav .nav-link {
         display: block;
-        text-align: center;
-        margin: 5px 0;
+        text-align: left;
+        margin: 10px 15px;
         transform: none !important;
+        color: #fff !important;
     }
     .navbar-nav .nav-link.active { color: #FFD700 !important; }
+    .navbar-toggler { z-index: 1000; }
 }
 
 /* Hero Banner */
@@ -129,7 +135,7 @@ body {
 .section-title .calendar-icon {
     display:inline-block;
     width:40px; height:40px;
-    background:#0077FF; /* 深亮藍 */
+    background:#0077FF; 
     color:#fff;
     font-weight:700;
     border-radius:6px;
@@ -300,6 +306,16 @@ window.addEventListener('scroll', revealCards);
 window.addEventListener('load', revealCards);
 </script>
 
+<!-- 手機版下拉滑入動畫 -->
+<script>
+const toggler = document.querySelector('.navbar-toggler');
+const collapse = document.getElementById('navbarNav');
+
+toggler.addEventListener('click', ()=>{
+    collapse.classList.toggle('show');
+});
+</script>
+
 <!-- 點擊縮回動畫與 active 顯示 -->
 <script>
 const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
@@ -307,6 +323,8 @@ navLinks.forEach(link=>{
     link.addEventListener('click', ()=>{
         navLinks.forEach(l=>l.classList.remove('active'));
         link.classList.add('active');
+        // 點選後手機選單自動關閉
+        if(collapse.classList.contains('show')) collapse.classList.remove('show');
     });
 });
 </script>
