--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap" rel="stylesheet">
-
 <style>
 :root {
     --nav-offset: 50px; /* 桌機版分頁整列右移，可自行調整 */
 }
-
 body {
     font-family: 'Noto Sans TC', sans-serif;
     margin:0; padding:0;
@@ -19,7 +17,6 @@ body {
     overflow-x:hidden;
     position:relative;
 }
-
 /* 背景氣泡動畫 */
 .bubble {
     position: absolute;
@@ -28,7 +25,6 @@ body {
     pointer-events: none;
     z-index: 0;
 }
-
 /* 導覽列 */
 .navbar {
     background: linear-gradient(90deg, rgba(75,0,130,0.85), rgba(147,112,219,0.85));
@@ -40,25 +36,20 @@ body {
 @media (min-width: 992px) {
     .navbar-collapse { padding-left: var(--nav-offset); }
 }
-
 /* 分頁水平間距 */
 .navbar-nav .nav-item { margin-left: 10px; margin-right: 10px; }
-
 /* 分頁文字及效果 */
 .navbar-nav .nav-link {
-    color: #FFFFFF !important; /* 初始白色 */
+    color: #FFFFFF !important; 
     font-weight: 700;
     transition: transform 0.2s ease, font-size 0.2s ease, color 0.3s ease;
 }
-
 /* 桌機滑過放大 */
 .navbar-nav .nav-link:hover,
 .navbar-nav .nav-link:focus { transform: scale(1.2); }
-
 /* active 狀態亮黃色 */
 .navbar-nav .nav-link.active { color: #FFD700 !important; }
-
-/* 手機版下拉及漢堡按鈕調整 */
+/* 手機版禁用滑動放大，active 亮黃 */
 @media (max-width: 992px) {
     .navbar-nav .nav-link {
         display: block;
@@ -67,23 +58,10 @@ body {
         transform: none !important;
     }
     .navbar-nav .nav-link.active { color: #FFD700 !important; }
-
-    /* 漢堡按鈕位置與尺寸 */
-    .navbar-toggler {
-        position: absolute;
-        right: 15px;        /* 距螢幕右邊 15px，可調整 */
-        top: 50%;
-        transform: translateY(-50%);
-        padding: 10px;      /* 點擊範圍增大 */
-        z-index: 1050;
-    }
-    .navbar-toggler-icon {
-        width: 35px;        /* icon 寬 */
-        height: 35px;       /* icon 高 */
-        background-size: 100% 100%;
-    }
+    /* 漢堡圖示位置靠右 */
+    .navbar-toggler { right: 15px; position: absolute; border: none; }
+    .navbar-toggler svg { width: 35px; height: 35px; }
 }
-
 /* Hero Banner */
 .hero {
     position: relative;
@@ -93,22 +71,9 @@ body {
     padding: 120px 20px 80px 20px;
     box-shadow: inset 0 0 100px rgba(0,0,0,0.3);
 }
-.hero h1 {
-    font-size: 3rem;
-    font-weight: 700;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
-}
-.hero-bottom-text {
-    margin-top: 30px;
-    font-size: 1.1rem;
-    font-weight: 500;
-    opacity: 0.95;
-}
-@media (max-width: 576px) {
-    .hero { padding: 80px 15px 50px 15px; }
-    .hero h1 { font-size: 1.8rem; line-height: 1.3; }
-    .hero-bottom-text { font-size: 0.95rem; margin-top: 20px; }
-}
+.hero h1 { font-size: 3rem; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.5); }
+.hero-bottom-text { margin-top: 30px; font-size: 1.1rem; font-weight: 500; opacity: 0.95; }
+@media (max-width: 576px) { .hero { padding: 80px 15px 50px 15px; } .hero h1 { font-size: 1.8rem; line-height:1.3; } .hero-bottom-text { font-size: 0.95rem; margin-top:20px; } }
 
 /* 卡片淡入 */
 .card-custom {
@@ -121,10 +86,7 @@ body {
     transform: translateY(50px);
     transition: all 0.8s ease;
 }
-.card-custom.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
+.card-custom.visible { opacity: 1; transform: translateY(0); }
 @media (max-width: 576px) { .card-custom { padding: 15px; } }
 
 /* 區塊標題 */
@@ -149,7 +111,6 @@ body {
 .section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
 
 .list-group-item { border:1px solid #DDD; }
-
 /* 按鈕 */
 .btn-custom {
     background: linear-gradient(90deg, #4B0082, #9370DB);
@@ -161,7 +122,6 @@ body {
     display:inline-block;
 }
 .btn-custom:hover { background: linear-gradient(90deg, #9370DB, #4B0082); transform: scale(1.05); }
-
 /* Footer */
 .footer {
     background-color: #F3E8FF;
@@ -179,7 +139,10 @@ body {
 <div class="container">
     <a class="navbar-brand" href="index.html">🎉 佳里奇美醫院 114年度 </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
+        <!-- 使用 Bootstrap Icons SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-list" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M2.5 12.5a.5.5 0 010-1h11a.5.5 0 010 1h-11zm0-4a.5.5 0 010-1h11a.5.5 0 010 1h-11zm0-4a.5.5 0 010-1h11a.5.5 0 010 1h-11z"/>
+        </svg>
     </button>
     <div class="collapse navbar-collapse ms-auto" id="navbarNav">
         <ul class="navbar-nav ms-auto">
@@ -204,10 +167,7 @@ body {
 <!-- 活動資訊 -->
 <section class="mb-5">
     <h3 class="section-title mb-3">
-        <span class="calendar-icon">
-            <span class="month">11月</span>
-            <span class="day">28</span>
-        </span>
+        <span class="calendar-icon"><span class="month">11月</span><span class="day">28</span></span>
         活動資訊一覽
     </h3>
     <div class="row">
